# beter_woorden

./: LICENSE  README.md  pyproject.toml  term.py
.github/workflows/: deploy.yml
app/: next.config.ts  package-lock.json  package.json  tsconfig.json
app/components/: AuthProvider.tsx  Intro.tsx  QuizJobProvider.tsx  QuizList.tsx  QuizReview.tsx  QuizRunner.tsx  Sidebar.tsx  TodoList.tsx  WordListEditor.tsx
app/lib/: quiz.ts  schema.ts
app/pages/: _app.tsx  dashboard.tsx  index.tsx
app/scripts/: extract_articles.ts  login.sh  test-save-quiz.sh
app/styles/: app.css  globals.css
app/supabase/: config.toml
app/supabase/functions/_shared/: cors.ts
app/supabase/functions/generate-quiz/: SupabaseSaver.ts  deno.json  index.ts  worker.ts
app/supabase/functions/quiz-worker-health-check/: deno.json  index.ts
app/supabase/migrations/: 20230712094349_init.sql  20251217133550_init.sql  20260108141358_type-language-meta.sql
app/utils/: supabase.ts
archive/: README.md  pyproject.toml  term.py
archive/scripts/: dev.sh  trigger.sh
archive/worker/: Dockerfile  docker-compose.yaml
archive/worker/deploy/: deploy.sh
archive/worker/scripts/: update_dns.sh
evals/: articles.json  eval_quiz.py  pyproject.toml  test_quiz_eval.py
lambda/: deploy.sh  dev.sh  template.yaml
lambda/src/: index.ts  package.json  serve_webhook.py
scripts/: exercise.py
src/: main.py
worker/: Dockerfile  docker-compose.yaml  pyproject.toml
worker/deploy/: deploy.sh  infra.yaml
worker/scripts/: dev.sh  local.sh  prod.sh
worker/src/: main.py  security.py
(+2 files in other folders)
